# ChangeLog for sys-apps/portage
# Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

*portage-2.2.00.9208 (19 Jan 2008)

  19 Jan 2008; Fabian Groffen <grobian@gentoo.org>
  -portage-2.2.00.9150.ebuild, +portage-2.2.00.9208.ebuild:
  Important update, support for svn:// and svn+https:// schemes. This ebuild
  forces the user to switch from svn+http:// as it scheduled for removal.

*portage-2.2.00.9205 (13 Jan 2008)

  13 Jan 2008; Fabian Groffen <grobian@gentoo.org>
  -portage-2.2.00.9139.ebuild, +portage-2.2.00.9205.ebuild:
  New snapshot

*portage-2.2.00.9154 (07 Jan 2008)

  07 Jan 2008; Fabian Groffen <grobian@gentoo.org>
  -portage-2.2.00.9133.ebuild, +portage-2.2.00.9154.ebuild:
  New snapshot with slight binpkg install fix

*portage-2.2.00.9150 (05 Jan 2008)

  05 Jan 2008; Fabian Groffen <grobian@gentoo.org>
  -portage-2.2.00.9063.ebuild, +portage-2.2.00.9150.ebuild:
  Fixes for binpkg installing, portage env and chpathtool

*portage-2.2.00.9139 (03 Jan 2008)

  03 Jan 2008; Fabian Groffen <grobian@gentoo.org>
  -portage-2.2.00.9049.ebuild, +portage-2.2.00.9139.ebuild:
  New snapshot

*portage-2.2.00.9133 (01 Jan 2008)

  01 Jan 2008; Fabian Groffen <grobian@gentoo.org>
  -portage-2.2.00.9044.ebuild, +portage-2.2.00.9133.ebuild:
  New snapshot, with fix for OSX applications with relative install_names

*portage-2.2.00.9063 (28 Dec 2007)

  28 Dec 2007; Fabian Groffen <grobian@gentoo.org>
  -portage-2.2.00.9058.ebuild, +portage-2.2.00.9063.ebuild:
  Last portage had a regression with regard to digest generation. New snapshot
  with a fix.

*portage-2.2.00.9058 (27 Dec 2007)

  27 Dec 2007; Fabian Groffen <grobian@gentoo.org>
  -portage-2.2.00.8872.ebuild, +portage-2.2.00.9058.ebuild:
  New snapshot with fix for chpathtool generating symlinks with garbage in the
  target

*portage-2.2.00.9049 (24 Dec 2007)

  24 Dec 2007; Fabian Groffen <grobian@gentoo.org>
  -portage-2.2.00.8843.ebuild, +portage-2.2.00.9049.ebuild: